--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,9 @@ h1 {
 }
 
 section {
-    border: 1px solid black;
+    box-shadow: 0 10px 50px 0 rgba(0,0,0,.1);
+    background: #fff;
+    border-radius: 15px;
     width: 350px;
     margin: 40px auto;
     padding: 40px 0;
@@ -65,7 +67,8 @@ td {
 
 table {
     border-collapse: collapse;
-    margin: 0 auto;
+    margin: 25px auto 0;
+    background: #fff;
 }
 
 tr {
